--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             mainNavItems.forEach(item => {
                 item.classList.toggle('active', item.dataset.tab === state.activeTab);
             });
-            newChatBtn.classList.toggle('hidden', state.activeTab !== 'chat' || !state.activeSessionId);
+            newChatBtn.classList.toggle('hidden', state.activeTab !== 'chat');
             newNoteBtn.classList.toggle('hidden', state.activeTab !== 'notepad' || !state.activeSessionId);
         }
         
