--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         };
         
         let confirmModalCallback = null;
-        const markdownConverter = new showdown.Converter({ tables: true, strikethrough: true, tasklists: true, simpleLineBreaks: true, openLinksInNewWindow: true, ghCompatibleHeaderId: true });
+        const markdownConverter = new showdown.Converter({ tables: true, strikethrough: true, tasklists: true, openLinksInNewWindow: true, ghCompatibleHeaderId: true });
         
         const sidebar = document.getElementById('sidebar');
         const sidebarList = document.getElementById('sidebar-list');
