--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
         .copy-code-btn:hover { background-color: var(--bg-input); color: var(--text-primary); }
         .modal-overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 50; }
         .modal-content { background-color: var(--bg-element); padding: 2rem; border-radius: 0.5rem; width: 90%; max-width: 400px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
+        .prose pre {
+            background-color: #282c34;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            position: relative;
+            margin-top: 1.25em;
+            margin-bottom: 1.25em;
+            white-space: pre; /* Оставляем этот стиль, он не дает коду переноситься на новую строку */
+            overflow-x: auto; /* ✨ ЭТО ИСПРАВЛЕНИЕ: добавляем горизонтальный скролл, если контент не помещается */
+        }
         
         #sidebar {
             transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
