--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-
         <style>
             :root {
                 --bg-main: #1e1e1e;
@@ -150,7 +149,7 @@
         </div>
     </aside>
 
-    <main class="flex-grow flex flex-col h-full w-full">
+    <main class="flex-grow flex flex-col h-full min-w-0">
         <nav class="flex-shrink-0 border-b border-border-color flex items-center">
             <button id="sidebar-toggle-btn" class="p-3 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
