--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <button id="sidebar-toggle-btn" class="p-3 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
-            <div class="flex space-x-4 px-4">
+            <div class="flex space-x-4 px-4 overflow-x-auto">
                 <button data-tab="chat" class="main-nav-item py-3 px-2 text-text-secondary hover:text-white transition-colors active">Чат</button>
                 <button data-tab="notepad" class="main-nav-item py-3 px-2 text-text-secondary hover:text-white transition-colors">Блокнот</button>
                 <button data-tab="roles" class="main-nav-item py-3 px-2 text-text-secondary hover:text-white transition-colors">Роли</button>
