--- a/index.html
+++ b/index.html
@@ -606,7 +606,8 @@
             const titleInput = document.getElementById('chat-title-input'); 
             const providerSelect = document.getElementById('provider-select'); 
             const roleSelect = document.getElementById('role-select'); 
-            const messagesContainer = document.getElementById('chat-messages'); 
+            
+            // --- Код для управления сворачиваемой панелью ---
             const toggleBtn = document.getElementById('toggle-chat-header-btn');
             const headerContent = document.getElementById('chat-header-content');
             
