--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             isLoading: false,
             isAuthReady: false,
             isSidebarCollapsed: false,
+            isChatHeaderCollapsed: false,
         };
         
         let confirmModalCallback = null;
