--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 
             .modal-overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center; z-index: 50; }
             .modal-content { background-color: var(--bg-element); padding: 2rem; border-radius: 0.5rem; width: 90%; max-width: 400px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
+
+            #sidebar-backdrop {
+                position: fixed;
+                inset: 0;
+                z-index: 30;
+                display: none;
+                backdrop-filter: blur(8px);
+                background-color: rgba(0, 0, 0, 0.5);
+            }
             
             #sidebar {
                 transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
