--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
                         if (e.target.closest('.delete-session-btn')) return;
                         state.activeSessionId = session.id;
                         render(); 
-                        if (window.innerWidth < 1024) {
-                           sidebar.classList.remove('open');
-                           sidebarBackdrop.classList.add('hidden');
-                        }
+                        //if (window.innerWidth < 1024) {
+                        //   sidebar.classList.remove('open');
+                        //   sidebarBackdrop.classList.add('hidden');
+                        //}
                     });
                     item.addEventListener('mouseenter', () => item.querySelector('.delete-session-btn').classList.remove('hidden'));
                     item.addEventListener('mouseleave', () => item.querySelector('.delete-session-btn').classList.add('hidden'));
