--- a/index.html
+++ b/index.html
@@ -165,6 +165,17 @@
                 min-height: 70px; /* Примерная минимальная высота сообщения */
                 width: 100%;
             }
+
+            .chat-view-compact .message-container {
+                max-width: 896px; /* аналог max-w-5xl в Tailwind */
+                margin-left: auto;
+                margin-right: auto;
+            }
+            
+            #chat-width-toggle.active {
+                background-color: var(--accent);
+                color: white;
+            }
     </style>
 </head>
 <body class="h-dvh w-full flex">
@@ -312,6 +323,7 @@
             isLoading: false,
             isAuthReady: false,
             isSidebarCollapsed: false,
+            isChatWidthCompact: false,
         };
         
         let confirmModalCallback = null;
@@ -451,7 +463,7 @@
                     </div>
                     <div id="chat-settings-collapsible" class="collapsible-panel">
                         <div>
-                            <div class="flex flex-col sm:flex-row items-center gap-2 w-full pt-3">
+                            <div class="flex flex-col sm:flex-row items-center gap-3 w-full pt-3 flex-wrap">
                                 <select id="role-select" class="bg-input border border-border-color rounded-md px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-accent w-full sm:w-auto">
                                 <option value="">Без роли</option>
                                 ${roleOptions}
@@ -459,11 +471,14 @@
                                 <select id="provider-select" class="bg-input border border-border-color rounded-md px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-accent w-full sm:w-auto">
                                 ${providerOptions.length > 0 ? providerOptions : '<option disabled>Добавьте провайдера в настройках</option>'}
                                 </select>
+                                <button id="chat-width-toggle" title="Переключить ширину чата" class="p-2 rounded-md hover:bg-bg-input transition-colors hidden lg:flex">
+                                    <i data-lucide="arrow-left-right" class="w-4 h-4"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div id="chat-messages" class="flex-grow p-4 overflow-y-auto"></div>
+                <div id="chat-messages" class="flex-grow p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
                 <div class="flex-shrink-0 p-4 border-t border-border-color"><form id="chat-form" class="relative"><textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent" placeholder="Введите ваше сообщение..." rows="1"></textarea><button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500"><i data-lucide="send" class="w-5 h-5 text-white"></i></button></form></div>
             </div>`; 
         }
@@ -700,6 +715,17 @@
             const settingsToggle = document.getElementById('chat-settings-toggle');
             const settingsPanel = document.getElementById('chat-settings-collapsible');
             const settingsIcon = document.getElementById('chat-settings-icon');
+
+            const widthToggleBtn = document.getElementById('chat-width-toggle');
+            if(widthToggleBtn) {
+                widthToggleBtn.classList.toggle('active', state.isChatWidthCompact);
+
+                widthToggleBtn.addEventListener('click', () => {
+                    state.isChatWidthCompact = !state.isChatWidthCompact;
+                    messagesContainer?.classList.toggle('chat-view-compact', state.isChatWidthCompact);
+                    widthToggleBtn.classList.toggle('active', state.isChatWidthCompact);
+                });
+            }
 
             settingsToggle?.addEventListener('click', () => {
                 settingsPanel.classList.toggle('expanded');
