--- a/index.html
+++ b/index.html
@@ -171,7 +171,14 @@
                 margin-left: auto;
                 margin-right: auto;
             }
+            .message-container {
+                transition: max-width 0.4s ease-in-out;
+            }
             
+            #chat-width-toggle {
+                transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+            }
+
             #chat-width-toggle.active {
                 background-color: var(--accent);
                 color: white;
@@ -466,7 +473,6 @@
                     </div>
                     <div id="chat-settings-collapsible" class="collapsible-panel">
                         <div>
-                            {/* Кнопка отсюда удалена */}
                             <div class="flex flex-col sm:flex-row items-center gap-3 w-full pt-3 flex-wrap">
                                 <select id="role-select" class="bg-input border border-border-color rounded-md px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-accent w-full sm:w-auto">
                                 <option value="">Без роли</option>
