--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 --bg-element: #333333;
                 --bg-input: #3c3c3c;
                 --text-primary: #f5f5f5;
-                --text-secondary: #b0b0b0;
+                --text-secondary: #888888;
                 --accent: #0e639c;
                 --accent-hover: #1177bb;
                 --border-color: #4a4a4a;
