--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             .bg-input {
                 background-color: var(--bg-input);
             }
+
+            .text-text-secondary {
+                color: var(--text-secondary);
+            }
+            
             .sidebar-item.active { background-color: var(--accent); color: white; }
             .sidebar-item:hover { background-color: var(--bg-element); }
             .main-nav-item.active { border-bottom: 2px solid var(--accent); color: white; }
