--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
             isAuthReady: false,
             isSidebarCollapsed: false,
             isChatWidthCompact: true,
+            isSettingsPanelExpanded: false,
         };
         
         let confirmModalCallback = null;
@@ -502,6 +503,10 @@
                    modelOptions = '<option disabled>Нет моделей</option>';
                 }
             }
+            
+            const isExpanded = state.isSettingsPanelExpanded;
+            const panelClasses = `collapsible-panel ${isExpanded ? 'expanded' : ''}`;
+            const iconClasses = `w-5 h-5 transition-transform ${isExpanded ? 'expanded' : ''}`;
 
             return `<div class="flex flex-col h-full">
                 <div class="flex-shrink-0 p-3 border-b border-border-color">
@@ -511,10 +516,10 @@
                         </button>
                         <input type="text" id="chat-title-input" class="bg-transparent text-lg font-semibold focus:outline-none focus:ring-1 focus:ring-accent rounded px-2 py-1 flex-grow min-w-0" value="${activeSession.title || ''}" placeholder="Название чата">
                         <button id="chat-settings-toggle" class="p-1 rounded-full hover:bg-bg-element transition-colors flex-shrink-0">
-                            <i data-lucide="chevron-down" id="chat-settings-icon" class="w-5 h-5 transition-transform"></i>
+                            <i data-lucide="chevron-down" id="chat-settings-icon" class="${iconClasses}"></i>
                         </button>
                     </div>
-                    <div id="chat-settings-collapsible" class="collapsible-panel">
+                    <div id="chat-settings-collapsible" class="${panelClasses}">
                         <div>
                             <div class="flex flex-col sm:flex-row items-center gap-3 w-full pt-3 flex-wrap">
                                 <select id="role-select" class="bg-input border border-border-color rounded-md px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-accent w-full sm:w-auto">
@@ -805,6 +810,7 @@
             }
 
             settingsToggle?.addEventListener('click', () => {
+                state.isSettingsPanelExpanded = !state.isSettingsPanelExpanded;
                 settingsPanel.classList.toggle('expanded');
                 settingsIcon.classList.toggle('expanded');
             });
