--- a/index.html
+++ b/index.html
@@ -230,14 +230,15 @@
             <button id="sidebar-toggle-btn" class="p-3 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
-            <div class="flex space-x-2 px-4">
+            <div class="flex items-center space-x-2 px-4 w-full">
                 <button data-tab="chat" title="Чат" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors active">
                     <i data-lucide="message-square" class="w-5 h-5"></i>
                 </button>
                 <button data-tab="notepad" title="Блокнот" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors">
                     <i data-lucide="notebook" class="w-5 h-5"></i>
                 </button>
-                <button data-tab="settings" title="Настройки" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors">
+            
+                <button data-tab="settings" title="Настройки" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors ml-auto">
                     <i data-lucide="settings" class="w-5 h-5"></i>
                 </button>
             </div>
