--- a/index.html
+++ b/index.html
@@ -226,21 +226,23 @@
     </aside>
 
     <main class="flex-grow flex flex-col h-full min-w-0">
-        <nav class="flex-shrink-0 border-b border-border-color flex items-center">
+        <nav class="flex-shrink-0 border-b border-border-color flex items-center px-2">
             <button id="sidebar-toggle-btn" class="p-3 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
-            <div class="flex space-x-2 px-4">
-                <button data-tab="chat" title="Чат" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors active">
-                    <i data-lucide="message-square" class="w-5 h-5"></i>
-                </button>
-                <button data-tab="notepad" title="Блокнот" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors">
-                    <i data-lucide="notebook" class="w-5 h-5"></i>
-                </button>
-                <button data-tab="settings" title="Настройки" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors">
-                    <i data-lucide="settings" class="w-5 h-5"></i>
-                </button>
-            </div>
+            
+            <!-- Кнопки слева -->
+            <button data-tab="chat" title="Чат" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors active ml-2">
+                <i data-lucide="message-square" class="w-5 h-5"></i>
+            </button>
+            <button data-tab="notepad" title="Блокнот" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors">
+                <i data-lucide="notebook" class="w-5 h-5"></i>
+            </button>
+        
+            <!-- Кнопка справа с автоматическим отступом слева -->
+            <button data-tab="settings" title="Настройки" class="main-nav-item p-3 rounded-md text-text-secondary hover:text-white hover:bg-bg-element transition-colors ml-auto">
+                <i data-lucide="settings" class="w-5 h-5"></i>
+            </button>
         </nav>
         <div id="main-content" class="flex-grow overflow-y-auto">
         </div>
