--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             const itemContent = document.createElement(isFolder ? 'summary' : 'div');
             itemContent.className = `sidebar-item flex justify-between items-center p-2 my-1 rounded-md cursor-pointer transition-colors duration-200 ${node.id === state.activeSessionId ? 'active' : ''} ${isDropTarget ? 'drop-target' : ''}`;
             
-            // ИСПРАВЛЕНИЕ: Используем padding-left вместо margin-left
+            // ИСПРАВЛЕНИЕ: Используем padding-left для корректного отступа содержимого
             itemContent.style.paddingLeft = `${level * 20 + 8}px`; // 8px базовый отступ + 20px на каждый уровень вложенности
             
             itemContent.dataset.id = node.id;
@@ -613,8 +613,14 @@
                     break;
                 case 'notepad':
                      if (activeSession) {
-                        mainContent.innerHTML = getNotepadViewHTML(activeSession);
-                        setupNotepadViewEventListeners();
+                        // ИСПРАВЛЕНИЕ: Проверяем тип сессии. Показываем редактор только для заметок.
+                        if (activeSession.type === 'notepad') {
+                            mainContent.innerHTML = getNotepadViewHTML(activeSession);
+                            setupNotepadViewEventListeners();
+                        } else {
+                            // Для папок и других типов показываем пустое состояние
+                            mainContent.innerHTML = getEmptyStateHTML('notepad');
+                        }
                     } else {
                         mainContent.innerHTML = getEmptyStateHTML('notepad');
                     }
