--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,9 @@
             }
         }
         
-        init();
+        window.onload = () => {
+            init();
+        };
     </script>
 
 </body>
