--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 font-family: 'Inter', sans-serif;
                 background-color: var(--bg-main);
                 color: var(--text-primary);
+                font-weight: 400;
             }
             input, textarea, select {
                 color: var(--text-primary);
