--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 background-color: var(--bg-main);
                 color: var(--text-primary);
                 font-weight: 100;
+                font-size: 15px;
             }
             input, textarea, select {
                 color: var(--text-primary);
