--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 font-weight: 100;
                 font-size: 20px;
             }
+            @media (max-width: 1023px) {
+                body {
+                    font-size: 15px;
+                }
+            }
+            
             input, textarea, select {
                 color: var(--text-primary);
             }
